--- a/docs/_layouts/integration.html
+++ b/docs/_layouts/integration.html
@@ -40,15 +40,14 @@ layout: default
 {% include_cached integration/models-components.html %}
 {% include_cached integration/meshery-registry.html %}
 
-<section class="relatedDesignSection">
-    <button>{{page.docURL}}</button>
+<section>
+    <h3>Designs containing {{page.title}}</h3>
     {% assign tech = page.docURL | split: '/' | last %}
     <ul>
-        <li>{{ tech }}</li>
     {% for design in site.catalog %}
     {% if design.compatibility contains tech %}
-    <li class="gygy">
-       {{design.name}}
+    <li>
+      <a href="https://meshery.layer5.io/catalog/content/catalog/{{ design.patternId }}" target="_blank" >{{design.name}}</a> 
     </li>
     {% endif %}
     {% endfor %}
