--- a/docs/_layouts/integration.html
+++ b/docs/_layouts/integration.html
@@ -9,6 +9,11 @@ layout: default
         image.onerror = null;
         image.src = '{{ page.image }}';
     }
+    const designLinks = document.querySelectorAll('.design-link');
+    if (designLinks.length === 0) {
+        document.getElementById('related-designs-header').style.display = 'none';
+    }
+
 </script>
 
 <!-- components -->
@@ -41,12 +46,12 @@ layout: default
 {% include_cached integration/meshery-registry.html %}
 
 <section>
-    <h3>Designs containing {{page.title}}</h3>
+    <h3 id="related-designs-header">Designs containing {{page.title}}</h3>
     {% assign tech = page.docURL | split: '/' | last %}
     <ul>
     {% for design in site.catalog %}
     {% if design.compatibility contains tech %}
-    <li>
+    <li class="design-link">
       <a href="https://meshery.layer5.io/catalog/content/catalog/{{ design.patternId }}" target="_blank" >{{design.name}}</a> 
     </li>
     {% endif %}
