fix: update app-error background color to a more appropriate shade of yellow
Signed-off-by: Lee Calcote <lee.calcote@layer5.io>
Signed-off-by: Tanishq <tanishq162005@gmail.com>

--- a/ui/public/static/style/index.css
+++ b/ui/public/static/style/index.css
@@ -12,5 +12,6 @@ svg.css-19bqh2r:hover {
 }
 
 .app-error {
-  background-color: #f0a303 !important;
+  /* yellow[20] = #C98300 */
+  background-color: #C98300 !important;
 }
