fix: change app-error background color to saffron and add deployment configuration
Signed-off-by: Lee Calcote <lee.calcote@layer5.io>

--- a/ui/public/static/style/index.css
+++ b/ui/public/static/style/index.css
@@ -13,5 +13,6 @@ svg.css-19bqh2r:hover {
 
 .app-error {
   /* yellow[20] = #C98300 */
-  background-color: #C98300 !important;
+  /* saffron[30] = #C4990A  */
+  background-color: #C4990A !important;
 }
