style: enhance table styling and update test status page headers for clarity
Signed-off-by: Lee Calcote <lee.calcote@layer5.io>

--- a/docs/_sass/table.scss
+++ b/docs/_sass/table.scss
@@ -21,10 +21,14 @@ table th {
   text-align: left;
 }
 
-table td{
+table td {
   border: 1px solid #dddddd;
   padding: 8px;
   text-align: left;
+}
+table td img{
+  text-align: center;
+  max-width: 2rem;
 }
 
 .td-box .row.section > table th,
