--- a/docs/_includes/toc.html
+++ b/docs/_includes/toc.html
@@ -17,7 +17,7 @@ $(document).ready(function() {
                var div_text = section.text().split('¶')[0];
               var parent = $("#" + div_id)
               var content = '<li id="link_' + div_id + '" class="md-nav__item"><a class="md-nav__link" href="#' + div_id + '" title="' + div_text +'">' + div_text +'</a></li>';
-              $(document).find(toc).append($('<div>').text(content).html());
+              $(document).find(toc).append(content);
             }
 
             // Add section code to subnavigation
