--- a/docs/lib/tasks/templates/default.md.haml
+++ b/docs/lib/tasks/templates/default.md.haml
@@ -3,7 +3,7 @@
 = auto_generated_comment
 
 :plain
-  Self-generated API documentation for Meshery's GraphQL API. The API can be explored interactively using the <a href="#{playground_url}" target="_blank" rel="noopener noreferrer">GraphQL Playground</a>. Documentation is generated from Meshery's GraphQL schema. Each table below documents a GraphQL type.
+  Self-generated API documentation for Meshery's GraphQL API. The API can be explored interactively using the [GraphQL Playground](./extensibility). Documentation is generated from Meshery's GraphQL schema. Each table below documents a GraphQL type.
 
   WARNING:
   Fields that are deprecated are marked with **{warning-solid}**.
